--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "moment": "^2.28.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5"
   },
